<resources>
    <string name="app_name">CooperVision</string>
    <string name="chemical_name">Chemical Name: </string>
    <string name="chemical_location">Location: </string>
    <string name="received_date">Received Date: </string>
    <string name="exp_date">Exp Date: </string>
    <string name="lot_order_number">Lot Order Number: </string>
    <string name="bottle_count">Bottle Count: </string>
    <string name="cas_number">CAS Number: </string>
    <string name="manufacturer">Manufacturer: </string>
    <string name="type">Type: </string>
    <string name="name">Name</string>

    <string-array name="locations_array">
        <item>Freezer</item>
        <item>Freezer - BOX 1</item>
        <item>Freezer - BOX 2</item>
        <item>Freezer - BOX 3</item>
        <item>Freezer - BOX 6</item>
        <item>Freezer - BOX 8</item>
        <item>Acid Cabinet</item>
        <item>Acid Cabinet - BOX 1</item>
        <item>Acid Cabinet - BOX 2</item>
        <item>Acid Cabinet - BOX 3</item>
        <item>Acid Cabinet - BOX 4</item>
        <item>Acid Cabinet - BOX 5</item>
        <item>Base Cabinet - BOX 1</item>
        <item>Base Cabinet - BOX 2</item>
        <item>Base Cabinet - BOX 3</item>
        <item>Base Cabinet - BOX 4</item>
        <item>Base Cabinet - BOX 5</item>
        <item>Base Cabinet - BOX 6</item>
        <item>Base Cabinet - BOX 7</item>
        <item>Base Cabinet - BOX 8</item>
        <item>Flammable Cabinet (yellow)</item>
        <item>Refrigerator - BOX 1</item>
        <item>Refrigerator - BOX 2</item>
        <item>Refrigerator - BOX 3</item>
        <item>Refrigerator - BOX 4</item>
        <item>Refrigerator - BOX 5</item>
        <item>Refrigerator - BOX 6</item>
        <item>Hazardous Waste Storage Area</item>
        <item>Metrology Lab</item>
        <item>Wall Cabinet (Left)</item>
        <item>Wall Cabinet (Right)</item>
    </string-array>
</resources>
