<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    android:elevation="4dp"
    android:layout_margin="4dp">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/cooper_drop_purple"
            android:id="@+id/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:text="@string/chemical_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/image"
            android:layout_marginTop="10dp"
            android:autoSizeTextType="uniform"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/btn_edit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textStyle="bold"
            android:id="@+id/btn_delete"
            android:textSize="20sp"
            android:layout_below="@id/tv_name"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_alignParentRight="true"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table"
            android:layout_below="@id/image"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true">

            <TableRow>
                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/chemical_location"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_location_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/chemical_location"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_rec_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_location"
                    android:layout_centerHorizontal="true"
                    android:text="@string/received_date"
                    android:layout_weight="1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_rec_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_location"
                    android:layout_centerHorizontal="true"
                    android:text="@string/received_date"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_exp_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_rec_date"
                    android:layout_centerHorizontal="true"
                    android:text="@string/exp_date"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_exp_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_rec_date"
                    android:layout_centerHorizontal="true"
                    android:text="@string/exp_date"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_lot_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_exp_date"
                    android:layout_centerHorizontal="true"
                    android:text="@string/lot_order_number"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_lot_order_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_exp_date"
                    android:layout_centerHorizontal="true"
                    android:text="@string/lot_order_number"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_bottle_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_lot_order"
                    android:layout_centerHorizontal="true"
                    android:text="@string/bottle_count"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_bottle_count_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_lot_order"
                    android:layout_centerHorizontal="true"
                    android:text="@string/bottle_count"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_cas_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_bottle_count"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cas_number"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_cas_number_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_bottle_count"
                    android:layout_centerHorizontal="true"
                    android:text="@string/cas_number"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_manufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_cas_number"
                    android:layout_centerHorizontal="true"
                    android:text="@string/manufacturer"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tv_manufacturer_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_cas_number"
                    android:layout_centerHorizontal="true"
                    android:text="@string/manufacturer"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>


            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_manufacturer"
                    android:layout_centerHorizontal="true"
                    android:text="@string/type"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_type_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_manufacturer"
                    android:layout_centerHorizontal="true"
                    android:text="@string/type"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"/>

            </TableRow>






        </TableLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Request Purchase"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/btn_request"
            android:layout_below="@id/table"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>



    </RelativeLayout>

</android.support.v7.widget.CardView>
